<resources>
    <string name="anytime_bar_active_call_bar_active_call_button_tooltip">View party</string>
    <string name="anytime_bar_active_call_bar_call_volume_button_tooltip">Party Volume</string>
    <string name="anytime_bar_active_call_bar_end_call_button_tooltip">Leave Party</string>
    <string name="anytime_bar_active_call_bar_full_title_fallback">Party</string>
    <string name="anytime_bar_active_call_bar_microphone_input_app_toast_body">Only people in the app can hear you.</string>
    <string name="anytime_bar_active_call_bar_microphone_input_app_toast_title">Switched to app chat</string>
    <string name="anytime_bar_active_call_bar_microphone_input_button_app_tooltip">Switch to app chat</string>
    <string name="anytime_bar_active_call_bar_microphone_input_button_party_tooltip">Switch to party chat</string>
    <string name="anytime_bar_active_call_bar_microphone_input_error_toast_body">Couldn\'t update microphone input.</string>
    <string name="anytime_bar_active_call_bar_microphone_input_error_toast_title">Something went wrong</string>
    <string name="anytime_bar_active_call_bar_microphone_input_party_toast_body">Only people in the party can hear you.</string>
    <string name="anytime_bar_active_call_bar_microphone_input_party_toast_title">Switched to party chat</string>
    <string name="anytime_bar_active_call_bar_mute_microphone_button_mute_tooltip">Mute Microphone</string>
    <string name="anytime_bar_active_call_bar_mute_microphone_button_unmute_tooltip">Unmute Microphone</string>
    <string name="anytime_bar_active_call_bar_title">Active Party</string>
    <string name="anytime_bar_active_call_bar_title_mic_muted">Active Party · Microphone Muted</string>
    <string name="anytime_bar_datetime_tooltip_v2">Date</string>
    <string name="anytime_bar_debug_bug_tooltip">Submit Bug Report</string>
    <string name="anytime_bar_debug_dogfood_tooltip">Dogfooding Settings</string>
    <string name="anytime_bar_debug_settings_tooltip">Internal Settings</string>
    <string name="anytime_bar_debug_system_stats_text">%1$.1f%%\10%2$dMB</string>
    <string name="anytime_bar_debug_system_stats_tooltip">CPU[%] and PSS[MiB] for SystemUX process</string>
    <string name="anytime_bar_status_headset_battery_charging_tooltip_subtext_v2">Charging</string>
    <string name="anytime_bar_status_headset_battery_plus_tooltip_v2">Headset %1$d%%\10Extended Battery %2$d%%</string>
    <string name="anytime_bar_status_headset_battery_saver_tooltip_subtext_v2">Battery Saver Mode</string>
    <string name="anytime_bar_status_headset_battery_tooltip_v2">Headset %1$d%%</string>
    <string name="anytime_bar_status_left_controller_battery_not_connected_tooltip_v2">Left controller not connected</string>
    <string name="anytime_bar_status_left_controller_battery_tooltip_v2">Left Controller %1$d%%</string>
    <string name="anytime_bar_status_right_controller_battery_not_connected_tooltip_v2">Right controller not connected</string>
    <string name="anytime_bar_status_right_controller_battery_tooltip_v2">Right Controller %1$d%%</string>
    <string name="anytime_bar_status_wifi_button_subtext_connected_no_internet_tooltip_v2">Connected, no internet</string>
    <string name="anytime_bar_status_wifi_button_subtext_connected_tooltip_v2">Connected</string>
    <string name="anytime_bar_status_wifi_button_subtext_not_connected_tooltip_v2">Not connected</string>
    <string name="anytime_bar_status_wifi_button_subtext_off_tooltip_v2">Off</string>
    <string name="anytime_bar_status_wifi_button_title_tooltip_v2">Wi-Fi</string>
    <string name="anytime_detail_button_blockandreport">Report</string>
    <string name="anytime_detail_button_chats">Chats</string>
    <string name="anytime_detail_button_livestream">Go Live</string>
    <string name="anytime_detail_button_livestream_stop">Streaming</string>
    <string name="anytime_detail_button_localstream">Cast</string>
    <string name="anytime_detail_button_localstream_stop">Casting</string>
    <string name="anytime_detail_button_screenshot">Take Photo</string>
    <string name="anytime_detail_button_videocapture">Record Video</string>
    <string name="anytime_detail_button_videocapture_stop">Recording</string>
    <string name="anytime_extended_battery_dialog_connected_notification_text_v2">You now have longer battery life.</string>
    <string name="anytime_extended_battery_dialog_connected_notification_title_v2">Extended Battery Installed</string>
    <string name="anytime_library_app_migration_dialog_accept_button_none_apps">Install</string>
    <string name="anytime_library_app_migration_dialog_accept_button_some_apps">Install (%1$d)</string>
    <string name="anytime_library_app_migration_dialog_decline_button">Skip</string>
    <string name="anytime_library_app_migration_dialog_description">Choose apps from your library to automatically install on your Quest 2. You can skip this and install individual apps later.</string>
    <string name="anytime_library_app_migration_dialog_list_title">Recent Apps</string>
    <string name="anytime_library_app_migration_dialog_title">Install Your Apps</string>
    <string name="anytime_library_app_migration_low_storage_toast_description">Some of the apps you selected won\'t be installed.</string>
    <string name="anytime_library_app_migration_low_storage_toast_title">Not enough storage</string>
    <string name="anytime_settings_tooltip_disabled_guardian">To access Guardian settings, re-enable Guardian in the Developer section of Settings.</string>
    <string name="anytime_tablet_android_settings_internal_disclaimer_tooltip">[FB ONLY] You are viewing the new Android implementation of settings. For more details visit the VR Settings XFN group.</string>
    <string name="anytime_tablet_destination_ui_exit_button">Exit</string>
    <string name="anytime_tablet_destination_ui_invite_button">Invite</string>
    <string name="anytime_tablet_destination_ui_quit_button">Quit</string>
    <string name="anytime_tablet_destination_ui_restart_button">Restart</string>
    <string name="anytime_tablet_destination_ui_resume_button">Resume</string>
    <string name="anytime_tablet_destination_ui_webxr_app_name">Immersive Web Experience</string>
    <string name="anytime_tablet_enterprise_admin_keypad_num_0">0</string>
    <string name="anytime_tablet_enterprise_admin_keypad_num_1">1</string>
    <string name="anytime_tablet_enterprise_admin_keypad_num_2">2</string>
    <string name="anytime_tablet_enterprise_admin_keypad_num_3">3</string>
    <string name="anytime_tablet_enterprise_admin_keypad_num_4">4</string>
    <string name="anytime_tablet_enterprise_admin_keypad_num_5">5</string>
    <string name="anytime_tablet_enterprise_admin_keypad_num_6">6</string>
    <string name="anytime_tablet_enterprise_admin_keypad_num_7">7</string>
    <string name="anytime_tablet_enterprise_admin_keypad_num_8">8</string>
    <string name="anytime_tablet_enterprise_admin_keypad_num_9">9</string>
    <string name="anytime_tablet_enterprise_admin_keypad_title">Admin PIN</string>
    <string name="anytime_tablet_enterprise_profile_admin_mode_info">You\'re using this device as an admin. Make sure to lock the controls when you\'re finished to avoid accidental changes.</string>
    <string name="anytime_tablet_enterprise_profile_apply_updates_body">All settings will be reloaded and any unsaved work may be lost.</string>
    <string name="anytime_tablet_enterprise_profile_apply_updates_title">Apply new settings now?</string>
    <string name="anytime_tablet_enterprise_profile_apply_updates_update_later">Update Later</string>
    <string name="anytime_tablet_enterprise_profile_apply_updates_update_now">Update Now</string>
    <string name="anytime_tablet_enterprise_profile_check_for_updates">Check for Updates</string>
    <string name="anytime_tablet_enterprise_profile_checking_for_updates">Please Wait</string>
    <string name="anytime_tablet_enterprise_profile_configuration_title">Last Device Update</string>
    <string name="anytime_tablet_enterprise_profile_default_company_name">Business Device</string>
    <string name="anytime_tablet_enterprise_profile_exit_admin_mode">Lock Admin Controls</string>
    <string name="anytime_tablet_settings_bug_report_tooltip">Report a Problem</string>
    <string name="anytime_tablet_settings_dnd_tooltip">Do Not Disturb</string>
    <string name="anytime_tablet_settings_guardian_button">Guardian</string>
    <string name="anytime_tablet_settings_hands_tooltip">Hand Tracking</string>
    <string name="anytime_tablet_settings_mic_tooltip">Mute Microphone</string>
    <string name="anytime_tablet_settings_nightshift_tooltip">Night Display</string>
    <string name="anytime_tablet_settings_oculus_link_button">Oculus Link</string>
    <string name="anytime_tablet_settings_oculus_link_button_cta">Rift</string>
    <string name="anytime_tablet_settings_reality_tuner_tooltip">Passthrough</string>
    <string name="anytime_tablet_settings_reset_view_tooltip">Reset View</string>
    <string name="anytime_tablet_settings_voice_commands_tooltip">Voice Commands</string>
    <string name="anytime_tablet_settings_wifi_button">Wi-Fi</string>
    <string name="anytime_tablet_social_offline_subtitle">Please check your connection and try again</string>
    <string name="anytime_tablet_social_offline_title">No Internet Connection</string>
    <string name="bug_report_cancel_body">Your report won’t be saved.</string>
    <string name="bug_report_cancel_button">Cancel</string>
    <string name="bug_report_cancel_report_button">Yes</string>
    <string name="bug_report_cancel_title">Cancel report?</string>
    <string name="bug_report_confirmation_body">Thanks for sending a report. Your feedback helps make Oculus better for everyone.</string>
    <string name="bug_report_confirmation_close_button">Close</string>
    <string name="bug_report_confirmation_title">Report Sent</string>
    <string name="bug_report_continue_report_button">No</string>
    <string name="bug_report_data_permission_system_checkbox_label">Include System Information</string>
    <string name="bug_report_data_permission_system_information">Includes packages installed, memory usage, and breakdown</string>
    <string name="bug_report_data_permission_system_label">System Information</string>
    <string name="bug_report_data_permission_title">Send This Report to Oculus?</string>
    <string name="bug_report_os_update_body">Updating to the latest software version may fix the problem you’re experiencing.</string>
    <string name="bug_report_os_update_title">Update Your Headset</string>
    <string name="bug_report_os_update_update_button">Update</string>
    <string name="bug_report_skip_button">Skip</string>
    <string name="bug_report_submit_button">Send Report</string>
    <string name="local_stream_privacy_check_dialog_button_allow">Allow</string>
    <string name="local_stream_privacy_check_dialog_button_deny">Deny</string>
    <string name="local_stream_privacy_check_dialog_description">You have a new request to share what you are doing in VR with another device.</string>
    <string name="local_stream_privacy_check_dialog_disable_warning">Don\'t show this warning dialog again</string>
    <string name="local_stream_privacy_check_dialog_title">Allow Headset casting</string>
    <string name="social_fb_link_cta">Learn More</string>
    <string name="social_fb_link_not_now">Not Now</string>
    <string name="social_party_dialog_button_cancel">Close</string>
    <string name="social_party_fb_link_dialog_title">Next Steps</string>
    <string name="social_receive_invite_dialog_button_accept_invite">Accept</string>
    <string name="social_receive_invite_dialog_button_dismiss">Dismiss</string>
    <string name="social_receive_invite_dialog_button_join_party_only">Voice Only</string>
    <string name="social_receive_invite_dialog_title">Invite Request</string>
</resources>