<?xml version="1.0" encoding="utf-8"?>
<com.oculus.panelapp.anytimeui.dialogs.SocialReceiveInviteDialog xmlns:android="http://schemas.android.com/apk/res/android" xmlns:vrshell="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.oculus.panelapp.anytimeui.dialogs.views.SystemDialogStandardLayout android:id="@+id/social_fb_link_upsell_dialog_layout" android:visibility="gone" android:layout_height="wrap_content" vrshell:acceptText="@string/social_fb_link_cta" vrshell:cancelText="@string/social_fb_link_not_now" vrshell:customLayout="@layout/social_fb_link_upsell_custom_layout" vrshell:tags="@array/system_dialog_with_smaller_title" vrshell:titleText="@string/social_party_fb_link_dialog_title" style="@style/SystemDialog"/>
    <com.oculus.panelapp.anytimeui.dialogs.views.SystemDialogStandardLayout android:id="@+id/social_receive_invite_dialog_layout" android:visibility="gone" vrshell:acceptText="@string/social_receive_invite_dialog_button_accept_invite" vrshell:cancelText="@string/social_receive_invite_dialog_button_dismiss" vrshell:customLayout="@layout/social_receive_invite_custom_layout" vrshell:icon="@drawable/oc_icon_parties_filled_24_d2d2d2" vrshell:middleText="@string/social_receive_invite_dialog_button_join_party_only" vrshell:tags="@array/party_invite_accept_modal_with_activity" vrshell:titleText="@string/social_receive_invite_dialog_title" style="@style/SystemDialog"/>
    <com.oculus.panelapp.anytimeui.dialogs.views.SystemDialogStandardLayout android:id="@+id/social_no_internet_connection_dialog_layout" android:visibility="gone" vrshell:cancelText="@string/social_party_dialog_button_cancel" vrshell:contentText="@string/anytime_tablet_social_offline_subtitle" vrshell:tags="@array/system_dialog_with_smaller_title" vrshell:titleText="@string/anytime_tablet_social_offline_title" style="@style/SystemDialog"/>
</com.oculus.panelapp.anytimeui.dialogs.SocialReceiveInviteDialog>
