<?xml version="1.0" encoding="utf-8"?>
<com.oculus.panelapp.bugreporter.OSUpdateView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/bug_report_os_update_view_0" android:background="@drawable/ocdialog_background" android:paddingLeft="@dimen/ocdialog_padding" android:paddingTop="@dimen/ocdialog_padding" android:paddingRight="@dimen/ocdialog_padding" android:paddingBottom="34dp" android:layout_width="@dimen/ocdialog_width" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/ocdialog_padding">
    <com.oculus.ocui.OCTextView android:textSize="@dimen/octypography_h2_font_size" android:textStyle="bold" android:textColor="?attr/ocPrimaryText" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bug_report_os_update_title" android:includeFontPadding="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.oculus.ocui.OCTextView android:textSize="@dimen/octypography_body1_font_size" android:textColor="?attr/ocPrimaryText" android:id="@+id/body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/bug_report_os_update_body" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title"/>
    <com.oculus.ocui.OCButton android:id="@+id/report_button" android:layout_width="@dimen/ocdialog_button_width" android:layout_height="@dimen/ocbutton_height" android:layout_marginTop="24dp" android:text="@string/bug_report_skip_button" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/body"/>
    <com.oculus.ocui.OCButton android:id="@+id/update_button" android:background="@drawable/ocbutton_primary" android:layout_width="@dimen/ocdialog_button_width" android:layout_height="@dimen/ocbutton_height" android:text="@string/bug_report_os_update_update_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/report_button"/>
    <com.oculus.ocui.OCButton android:textColor="@color/tertiary_button_text_color" android:id="@+id/cancel_button" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:text="@string/bug_report_cancel_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/report_button"/>
</com.oculus.panelapp.bugreporter.OSUpdateView>
