<?xml version="1.0" encoding="utf-8"?>
<com.oculus.panelapp.androiddialog.dialogs.localstream.LocalStreamPrivacyCheckDialog xmlns:android="http://schemas.android.com/apk/res/android" xmlns:bind="http://schemas.android.com/apk/res-auto" android:tag="layout/local_stream_privacy_check_0" android:background="@drawable/ocdialog_background" android:paddingTop="@dimen/ocdialog_padding" android:paddingBottom="@dimen/ocdialog_padding" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="@dimen/ocdialog_padding" android:paddingEnd="0dp">
    <com.oculus.ocui.OCTextView android:textStyle="bold" android:gravity="center" android:id="@+id/title" android:paddingBottom="@dimen/ocdialog_content_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/local_stream_privacy_check_dialog_title" style="@style/H2"/>
    <com.oculus.ocui.OCTextView android:id="@+id/body" android:paddingBottom="@dimen/ocdialog_content_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/local_stream_privacy_check_dialog_description" bind:layout_constraintTop_toBottomOf="@+id/title" style="@style/Body1"/>
    <com.oculus.ocui.OCToggle android:id="@+id/disable_privacy_check_toggle" android:layout_width="@dimen/ocswitch_toggle_width" android:layout_height="@dimen/ocswitch_toggle_height" android:checked="false" bind:layout_constraintTop_toBottomOf="@+id/body"/>
    <com.oculus.ocui.OCTextView android:id="@+id/toggle_text" android:paddingBottom="@dimen/ocdialog_content_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/local_stream_privacy_check_dialog_disable_warning" android:paddingStart="@dimen/ocdialog_content_margin" android:paddingEnd="0dp" bind:layout_constraintStart_toEndOf="@+id/disable_privacy_check_toggle" bind:layout_constraintTop_toTopOf="@+id/disable_privacy_check_toggle" style="@style/Body1"/>
    <com.oculus.ocui.OCButton android:id="@+id/deny_button" android:layout_width="@dimen/ocdialog_button_width" android:layout_height="@dimen/ocbutton_height" android:text="@string/local_stream_privacy_check_dialog_button_deny" bind:layout_constraintTop_toBottomOf="@+id/toggle_text"/>
    <com.oculus.ocui.OCButton android:id="@+id/allow_button" android:background="@drawable/ocbutton_primary" android:layout_width="@dimen/ocdialog_button_width" android:layout_height="@dimen/ocbutton_height" android:text="@string/local_stream_privacy_check_dialog_button_allow" android:layout_marginStart="12dp" bind:layout_constraintStart_toEndOf="@+id/deny_button" bind:layout_constraintTop_toTopOf="@+id/deny_button"/>
</com.oculus.panelapp.androiddialog.dialogs.localstream.LocalStreamPrivacyCheckDialog>
