<?xml version="1.0" encoding="utf-8"?>
<com.oculus.panelapp.bugreporter.DataPermissionView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/bug_report_data_permission_view_0" android:background="@drawable/ocdialog_background" android:paddingBottom="24dp" android:layout_width="@dimen/ocdialog_width" android:layout_height="wrap_content" android:paddingStart="@dimen/ocdialog_padding" android:paddingEnd="@dimen/ocdialog_padding">
    <com.oculus.ocui.OCButton android:id="@+id/back_button" android:background="@drawable/ocback_button" android:layout_width="36dp" android:layout_height="36dp" app:layout_constraintBottom_toBottomOf="@+id/title" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/title"/>
    <com.oculus.ocui.OCTextView android:textSize="@dimen/octypography_h2_font_size" android:textStyle="bold" android:textColor="?attr/ocPrimaryText" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/bug_report_data_permission_title" android:includeFontPadding="false" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.oculus.ocui.OCTextView android:textSize="@dimen/octypography_body1_font_size" android:textColor="?attr/ocPrimaryText" android:id="@+id/system_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/bug_report_data_permission_system_label" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title"/>
    <com.oculus.ocui.OCTextView android:textSize="@dimen/octypography_body2_font_size" android:textColor="?attr/ocSecondaryText" android:id="@+id/system_information" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bug_report_data_permission_system_information" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/system_label"/>
    <com.oculus.ocui.OCCheckbox android:id="@+id/checkbox" android:tag="binding_1" android:layout_width="@dimen/ocswitch_checkbox_container_width" android:layout_height="@dimen/ocswitch_checkbox_container_height" app:layout_constraintBottom_toBottomOf="@+id/checkbox_label" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/checkbox_label"/>
    <com.oculus.ocui.OCTextView android:textSize="@dimen/octypography_body1_font_size" android:textColor="?attr/ocPrimaryText" android:id="@+id/checkbox_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:text="@string/bug_report_data_permission_system_checkbox_label" app:layout_constraintStart_toEndOf="@+id/checkbox" app:layout_constraintTop_toBottomOf="@+id/system_information"/>
    <com.oculus.ocui.OCButton android:id="@+id/cancel_button" android:layout_width="@dimen/ocdialog_button_width" android:layout_height="@dimen/ocbutton_height" android:layout_marginTop="24dp" android:text="@string/bug_report_cancel_button" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/checkbox_label"/>
    <com.oculus.ocui.OCButton android:id="@+id/submit_button" android:background="@drawable/ocbutton_primary" android:layout_width="@dimen/ocdialog_button_width" android:layout_height="@dimen/ocbutton_height" android:text="@string/bug_report_submit_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/cancel_button"/>
</com.oculus.panelapp.bugreporter.DataPermissionView>
