<?xml version="1.0" encoding="utf-8"?>
<com.oculus.panelapp.anytimeui.v2.tablet.settings.SettingsView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/anytime_tablet_settings_view_v2_0" android:background="@drawable/anytime_tablet_right_content_background_v2" android:paddingLeft="24dp" android:paddingTop="56dp" android:paddingRight="24dp" android:layout_width="@dimen/octablet_width" android:layout_height="@dimen/octablet_height" android:paddingHorizontal="24dp">
    <com.oculus.ocui.OCNotchedSlider android:id="@+id/slider_reality_tuner" android:tag="binding_1" android:layout_width="0dp" android:layout_height="@dimen/ocbutton_height" android:layout_marginEnd="8dp" app:activeDrawable="@drawable/oc_icon_pass_through_filled_24_d2d2d2" app:inactiveDrawable="@drawable/oc_icon_pass_through_off_filled_24_d2d2d2" app:layout_constraintEnd_toStartOf="@+id/seekbar_volume" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <tag android:value="@string/anytime_tablet_settings_reality_tuner_tooltip" android:id="@+id/tooltip_text"/>
        <tag android:value="tooltip_id=anytime_tablet_settings_reality_tuner_tooltip,tooltip_position=top,tooltip_color=gray" android:id="@+id/tooltip_data"/>
    </com.oculus.ocui.OCNotchedSlider>
    <include android:id="@+id/seekbar_volume" android:layout_width="0dp" android:layout_height="@dimen/ocbutton_height" app:layout_constraintEnd_toStartOf="@+id/seekbar_brightness" app:layout_constraintStart_toEndOf="@+id/slider_reality_tuner" app:layout_constraintTop_toTopOf="0" layout="@layout/osig_seekbar"/>
    <include android:id="@+id/seekbar_brightness" android:layout_width="0dp" android:layout_height="@dimen/ocbutton_height" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/seekbar_volume" app:layout_constraintTop_toTopOf="0" layout="@layout/osig_seekbar"/>
    <com.oculus.ocui.OCTileButton android:id="@+id/button_wifi" android:tag="binding_2" android:layout_width="0dp" android:layout_height="88dp" android:layout_marginTop="24dp" app:layout_constraintEnd_toStartOf="@+id/button_guardian" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/seekbar_volume" app:title="@string/anytime_tablet_settings_wifi_button"/>
    <com.oculus.ocui.OCTileButton android:id="@+id/button_guardian" android:tag="binding_3" android:layout_width="0dp" android:layout_height="88dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/button_enable_link" app:layout_constraintStart_toEndOf="@+id/button_wifi" app:layout_constraintTop_toTopOf="@+id/button_wifi" app:title="@string/anytime_tablet_settings_guardian_button"/>
    <com.oculus.ocui.OCTileButton android:id="@+id/button_enable_link" android:tag="binding_4" android:layout_width="0dp" android:layout_height="88dp" android:layout_marginStart="8dp" app:ctaText="@string/anytime_tablet_settings_oculus_link_button_cta" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/button_guardian" app:layout_constraintTop_toTopOf="@+id/button_wifi" app:title="@string/anytime_tablet_settings_oculus_link_button" app:titleIcon="@drawable/anytime_tablet_settings_icon_oculus_link_v2"/>
    <com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton android:id="@+id/button_night_shift" android:layout_width="@dimen/anytime_tablet_settings_toggle_button_width_v2" android:layout_height="@dimen/ocbutton_height" android:layout_marginTop="24dp" app:icon="@drawable/oc_icon_night_mode_filled_24_d2d2d2" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/button_wifi">
        <tag android:value="@string/anytime_tablet_settings_nightshift_tooltip" android:id="@+id/tooltip_text"/>
        <tag android:value="tooltip_id=anytime_tablet_settings_nightshift_tooltip,tooltip_position=top,tooltip_color=gray" android:id="@+id/tooltip_data"/>
    </com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton>
    <com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton android:id="@+id/button_reset_view" android:layout_width="@dimen/anytime_tablet_settings_toggle_button_width_v2" android:layout_height="@dimen/ocbutton_height" android:layout_marginTop="24dp" android:layout_marginStart="8dp" app:icon="@drawable/oc_icon_move_filled_24_d2d2d2" app:layout_constraintStart_toEndOf="@+id/button_night_shift" app:layout_constraintTop_toBottomOf="@+id/button_wifi">
        <tag android:value="@string/anytime_tablet_settings_reset_view_tooltip" android:id="@+id/tooltip_text"/>
        <tag android:value="tooltip_id=anytime_tablet_settings_reset_view_tooltip,tooltip_position=top,tooltip_color=gray" android:id="@+id/tooltip_data"/>
    </com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton>
    <com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton android:id="@+id/button_do_not_disturb" android:tag="binding_5" android:layout_width="@dimen/anytime_tablet_settings_toggle_button_width_v2" android:layout_height="@dimen/ocbutton_height" android:layout_marginTop="24dp" android:layout_marginStart="8dp" app:icon="@drawable/oc_icon_do_not_disturb_on_filled_24_d2d2d2" app:layout_constraintStart_toEndOf="@+id/button_reset_view" app:layout_constraintTop_toBottomOf="@+id/button_wifi">
        <tag android:value="@string/anytime_tablet_settings_dnd_tooltip" android:id="@+id/tooltip_text"/>
        <tag android:value="tooltip_id=anytime_tablet_settings_dnd_tooltip,tooltip_position=top,tooltip_color=gray" android:id="@+id/tooltip_data"/>
    </com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton>
    <com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton android:id="@+id/button_microphone" android:layout_width="@dimen/anytime_tablet_settings_toggle_button_width_v2" android:layout_height="@dimen/ocbutton_height" android:layout_marginTop="24dp" android:layout_marginStart="8dp" app:icon="@drawable/oc_icon_microphone_off_filled_24_d2d2d2" app:layout_constraintStart_toEndOf="@+id/button_do_not_disturb" app:layout_constraintTop_toBottomOf="@+id/button_wifi">
        <tag android:value="@string/anytime_tablet_settings_mic_tooltip" android:id="@+id/tooltip_text"/>
        <tag android:value="tooltip_id=anytime_tablet_settings_mic_tooltip,tooltip_position=top,tooltip_color=gray" android:id="@+id/tooltip_data"/>
    </com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton>
    <com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton android:id="@+id/button_activate_assistant" android:tag="binding_6" android:layout_width="@dimen/anytime_tablet_settings_toggle_button_width_v2" android:layout_height="@dimen/ocbutton_height" android:layout_marginTop="24dp" android:layout_marginStart="8dp" app:icon="@drawable/oc_icon_voice_assistant_filled_24_d2d2d2" app:layout_constraintStart_toEndOf="@+id/button_microphone" app:layout_constraintTop_toBottomOf="@+id/button_wifi">
        <tag android:value="@string/anytime_tablet_settings_voice_commands_tooltip" android:id="@+id/tooltip_text"/>
        <tag android:value="tooltip_id=anytime_tablet_settings_voice_commands_tooltip,tooltip_position=top,tooltip_color=gray" android:id="@+id/tooltip_data"/>
    </com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton>
    <com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton android:id="@+id/button_hands" android:tag="binding_7" android:layout_width="@dimen/anytime_tablet_settings_toggle_button_width_v2" android:layout_height="@dimen/ocbutton_height" android:layout_marginTop="24dp" android:layout_marginStart="8dp" app:icon="@drawable/oc_icon_hand_tracking_filled_24_d2d2d2" app:layout_constraintStart_toEndOf="@+id/button_activate_assistant" app:layout_constraintTop_toBottomOf="@+id/button_wifi">
        <tag android:value="@string/anytime_tablet_settings_hands_tooltip" android:id="@+id/tooltip_text"/>
        <tag android:value="tooltip_id=anytime_tablet_settings_hands_tooltip,tooltip_position=top,tooltip_color=gray" android:id="@+id/tooltip_data"/>
    </com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton>
    <com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton android:id="@+id/button_bug_report" android:tag="binding_8" android:layout_width="@dimen/anytime_tablet_settings_toggle_button_width_v2" android:layout_height="@dimen/ocbutton_height" android:layout_marginTop="24dp" android:layout_marginStart="8dp" app:icon="@drawable/oc_icon_bug_filled_24_f0f0f0" app:layout_constraintStart_toEndOf="@+id/button_hands" app:layout_constraintTop_toBottomOf="@+id/button_wifi">
        <tag android:value="@string/anytime_tablet_settings_bug_report_tooltip" android:id="@+id/tooltip_text"/>
        <tag android:value="tooltip_id=anytime_tablet_settings_bug_report_tooltip,tooltip_position=top,tooltip_color=gray" android:id="@+id/tooltip_data"/>
    </com.oculus.panelapp.anytimeui.v2.tablet.common.ToggleButton>
</com.oculus.panelapp.anytimeui.v2.tablet.settings.SettingsView>
