<?xml version="1.0" encoding="utf-8"?>
<com.oculus.panelapp.bugreporter.ConfirmationView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/bug_report_confirmation_view_0" android:background="@drawable/ocdialog_background" android:padding="@dimen/ocdialog_padding" android:paddingBottom="24dp" android:layout_width="@dimen/ocdialog_width" android:layout_height="wrap_content">
    <com.oculus.ocui.OCTextView android:textSize="@dimen/octypography_h2_font_size" android:textStyle="bold" android:textColor="?attr/ocPrimaryText" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bug_report_confirmation_title" android:includeFontPadding="true" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.oculus.ocui.OCTextView android:textSize="@dimen/octypography_body1_font_size" android:textColor="?attr/ocPrimaryText" android:id="@+id/body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/bug_report_confirmation_body" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title"/>
    <com.oculus.ocui.OCButton android:id="@+id/close_button" android:background="@drawable/ocbutton_primary" android:layout_width="@dimen/ocdialog_button_width" android:layout_height="@dimen/ocbutton_height" android:layout_marginTop="24dp" android:text="@string/bug_report_confirmation_close_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/body"/>
</com.oculus.panelapp.bugreporter.ConfirmationView>
